working on manager views/approve&deny

--- a/ManagerAD.html
+++ b/ManagerAD.html
@@ -161,11 +161,7 @@
     <h1 class="logo" , style="text-align: center;">AJ Reimbursements</h1>
     <h2 style="text-align: center;">List of Current Tickets</h2>
 
-    <form type="button">
-      <button type="filter1" onclick="myPending()">Show Pending</button>
-      <button type="filter2" onclick="myApproved()">Show Approved</button>
-      <button type="filter3" onclick="myDenied()">Show Denied</button>
-    </form>
+  
 
     <!-- <form type = "request">
         <div class="ticket-container">
@@ -231,7 +227,7 @@
       </div>
 </form> -->
 
-    <div class="scroll-box">
+    <div class="">
       <table>
         <thead>
           <th>Employee ID</th>
@@ -258,89 +254,13 @@
             <td></td>
           </tr>
           <tr>
-            <td>2</td>
-            <td>Jane</td>
-            <td>Smith</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>2</td>
-            <td>Mark</td>
-            <td>Johnson</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>2</td>
-            <td>John</td>
-            <td>Doe</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>2</td>
-            <td>John</td>
-            <td>Doe</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>2</td>
-            <td>John</td>
-            <td>Doe</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>2</td>
-            <td>John</td>
-            <td>Doe</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>2</td>
-            <td>John</td>
-            <td>Doe</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+           
+            
           </tr>
         </tbody>
       </table>
     </div>
 
-    <form>
-      <input type="submit" value="Submit Requests">
-    </form>
 
     <form action="\Users\Joseph Onyenso\Documents\GitHub\p1\p1ajnewticket\p1ajnewticket.html">
       <input type="submit" value="Go to Tickets">
@@ -352,6 +272,6 @@
 
 
   </div>
-  <script src="p1ajmanagers.js"></script>
+  <script src="ManagerAD.js"></script>
 </body>
 </html>
