--- a/Manager.html
+++ b/Manager.html
@@ -3,6 +3,8 @@
 
 <head>
     <title>Manager List</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -122,7 +124,13 @@
             </p>
         </div> -->
 
-        <div class="scroll-box">
+        <form type="button">
+            <button class="btn btn-warning" type="filter1" onclick="myPending()">Show Pending</button>
+            <button class="btn btn-success" type="filter2" onclick="myApproved()">Show Approved</button>
+            <button class="btn btn-danger" type="filter3" onclick="myDenied()">Show Denied</button>
+        </form>
+
+        <div class="">
             <table>
                 <thead>
                     <th>Employee ID</th>
@@ -139,18 +147,11 @@
                 </tbody>
             </table>
         </div>
-<!-- 
-        <form>
-            <input type="submit" value="Add Reimbursement Request">
-        </form> -->
 
-        <form>
-            <input id="approveDeny" type="submit" value="Approve/Deny requests">
-        </form>
+        <button id="approveDeny" class="btn btn-primary" type="submit">Approve/Deny requests</button>
+        
+        <button id="goBack" class="btn btn-dark" type="submit">Back to Login</button>
 
-        <form>
-            <input type="submit" value="Back to Login">
-        </form>
     </div>
 
     <script src="Manager.js"></script>
