--- a/NewTicket.html
+++ b/NewTicket.html
@@ -3,7 +3,6 @@
 
 <head>
   <title>New Employee Page</title>
-  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous"> -->
 
   <style>
       body {
@@ -64,7 +63,7 @@
         background-color: #0d4675;
       }
   
-      button[id="Register"] {
+      button[id="submitTicketBtn"] {
         background-color: #15558a;
         color: white;
         padding: 12px 20px;
@@ -75,7 +74,7 @@
         margin-bottom: 20px;
       }
   
-      button[id="backToLogin"] {
+      button[id="backToList"] {
         background-color: #15558a;
         color: white;
         padding: 12px 20px;
@@ -152,27 +151,24 @@
 <body>
   <div class="ticket-container">
     <h1 class="logo" , style="text-align: center;">AJ Reimbursements</h1>
-    <h2 style="text-align: center;">Register New Employee</h2>
+    <h2 style="text-align: center;">New Ticket</h2>
     <form>
-      <input type="text" placeholder="First Name" id="firstName" required>
+      <input type="text" placeholder="Amount" id="ticketAmout" required>
       <br>
-      <input type="text" placeholder="Last Name" id="lastName" required>
+      <input type="text" placeholder="Description" id="ticketDesc" required>
       <br>
-      <input type="text" placeholder="Username" id="username" required>
-      <br>
-      <input type="text" placeholder="Password" id="password" required>
-      <br>
+     
     </form>
 
     <div class="col-12" style="text-align: center;">
-      <button id="Register" type="submit" class="btn btn-primary col-5">Submit</button>
-      <button id="backToLogin" class="btn btn-dark col-5" type="submit" >Back to Login</button>
+      <button id="submitTicketBtn" type="submit" class="btn btn-primary col-5">Submit</button>
+      <button id="backToList" class="btn btn-dark col-5" type="submit" >Back</button>
     </div>
     
    
   </div>
 
-  <script src="Register.js"></script>
+  <script src="NewTicket.js"></script>
 </body>
 
 </html>
